# face_reco

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
include/: crawler.hpp  crawler_worker.hpp  extractor.hpp  face_embedder.hpp  result_data.hpp
models/: faceNet.onnx
src/: crawler.cpp  crawler_worker.cpp  extractor.cpp  face_embedder.cpp  onnx_face_compare.cpp
ui/: mainwindow.cpp  mainwindow.hpp
